--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -203,8 +203,8 @@
                                             <div class="navbar-header">
 
                                                 <!-- Logo -->
-                                                <a href="google.com" class="navbar-brand" title="LPB" style="outline: none; cursor: default;">
-                                                    <img src="images/uploads/IMG_20200917_141115_242.jpg" alt="LPB Logo" style="border-radius: 0px; outline: none; cursor: default;">
+                                                <a href="google.com" class="navbar-brand" title="BF" style="outline: none; cursor: default;">
+                                                    <img src="images/uploads/IMG_20200917_141115_242.jpg" alt="BF" style="border-radius: 0px; outline: none; cursor: default;">
                                                 </a><!-- /End Logo -->
 
                                                 <!-- Toggle Menu Button -->
@@ -594,7 +594,7 @@
 
                                     <!-- Title -->
                                     <div class="team-block-title">
-                                        <h4 style="outline: none; cursor: default;"><a href="https://lpbuilder.pro/" title="ARTHUR" style="outline: none; cursor: default;">Vova</a></h4>
+                                        <h4 style="outline: none; cursor: default;"><a href="google.com" title="ARTHUR" style="outline: none; cursor: default;">Vova</a></h4>
                                         <h6 class="main-color" style="outline: none; cursor: default;">DEVELOPER</h6>
                                     </div><!-- /End Title -->
 
@@ -622,7 +622,7 @@
 
                                     <!-- Title -->
                                     <div class="team-block-title">
-                                        <h4 style="outline: none; cursor: default;"><a href="https://lpbuilder.pro/" title="ACELINE" style="outline: none; cursor: default;">Liza</a></h4>
+                                        <h4 style="outline: none; cursor: default;"><a href="google.com" title="ACELINE" style="outline: none; cursor: default;">Liza</a></h4>
                                         <h6 class="main-color" style="outline: none; cursor: default;">ART DIRECTOR</h6>
                                     </div><!-- /End Title -->
 
@@ -651,7 +651,7 @@
 
                                     <!-- Title -->
                                     <div class="team-block-title">
-                                        <h4 style="outline: none; cursor: default;"><a href="https://lpbuilder.pro/" title="CORIN" style="outline: none; cursor: default;">Yura</a></h4>
+                                        <h4 style="outline: none; cursor: default;"><a href="google.com" title="CORIN" style="outline: none; cursor: default;">Yura</a></h4>
                                         <h6 class="main-color" style="outline: none; cursor: default;">CEO</h6>
                                     </div><!-- /End Title -->
 
