--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -203,7 +203,7 @@
                                             <div class="navbar-header">
 
                                                 <!-- Logo -->
-                                                <a href="google.com" class="navbar-brand" title="BF" style="outline: none; cursor: default;">
+                                                <a href="" class="navbar-brand" title="BF" style="outline: none; cursor: default;">
                                                     <img src="images/uploads/IMG_20200917_141115_242.jpg" alt="BF" style="border-radius: 0px; outline: none; cursor: default;">
                                                 </a><!-- /End Logo -->
 
@@ -594,7 +594,7 @@
 
                                     <!-- Title -->
                                     <div class="team-block-title">
-                                        <h4 style="outline: none; cursor: default;"><a href="google.com" title="ARTHUR" style="outline: none; cursor: default;">Vova</a></h4>
+                                        <h4 style="outline: none; cursor: default;"><a href="" title="ARTHUR" style="outline: none; cursor: default;">Vova</a></h4>
                                         <h6 class="main-color" style="outline: none; cursor: default;">DEVELOPER</h6>
                                     </div><!-- /End Title -->
 
@@ -622,7 +622,7 @@
 
                                     <!-- Title -->
                                     <div class="team-block-title">
-                                        <h4 style="outline: none; cursor: default;"><a href="google.com" title="ACELINE" style="outline: none; cursor: default;">Liza</a></h4>
+                                        <h4 style="outline: none; cursor: default;"><a href="" title="ACELINE" style="outline: none; cursor: default;">Liza</a></h4>
                                         <h6 class="main-color" style="outline: none; cursor: default;">ART DIRECTOR</h6>
                                     </div><!-- /End Title -->
 
@@ -651,7 +651,7 @@
 
                                     <!-- Title -->
                                     <div class="team-block-title">
-                                        <h4 style="outline: none; cursor: default;"><a href="google.com" title="CORIN" style="outline: none; cursor: default;">Yura</a></h4>
+                                        <h4 style="outline: none; cursor: default;"><a href="" title="CORIN" style="outline: none; cursor: default;">Yura</a></h4>
                                         <h6 class="main-color" style="outline: none; cursor: default;">CEO</h6>
                                     </div><!-- /End Title -->
 
@@ -723,9 +723,9 @@ Telegram: @itter_yurii</p>
                                     <!-- Widget Block Content -->
                                     <div class="widget-block-content">
                                         <ul>
-                                            <li style=""><a href="google.com" title="Privacy Policy" style="color: rgb(197, 67, 53); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">PRIVACY POLICY</a></li>
-                                            <li style=""><a href="google.com" title="Terms of use" style="color: rgb(231, 76, 60); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">TERMS OF USE</a></li>
-                                            <li style=""><a href="google.com" title="Contact us" style="color: rgb(85, 36, 31); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">CONTACT US</a></li>
+                                            <li style=""><a href="" title="Privacy Policy" style="color: rgb(197, 67, 53); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">PRIVACY POLICY</a></li>
+                                            <li style=""><a href="" title="Terms of use" style="color: rgb(231, 76, 60); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">TERMS OF USE</a></li>
+                                            <li style=""><a href="" title="Contact us" style="color: rgb(85, 36, 31); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">CONTACT US</a></li>
                                         </ul>
                                     </div><!-- /End Widget Block Content -->
 
@@ -749,9 +749,9 @@ Telegram: @itter_yurii</p>
                                     <!-- Widget Block Content -->
                                     <div class="widget-block-content">
                                         <ul>
-                                            <li style=""><a href="google.com" title="FAQs" style="color: rgb(231, 76, 60); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">FAQs</a></li>
-                                            <li style=""><a href="google.com" title="Sign up" style="color: rgb(197, 67, 53); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">SIGN UP</a></li>
-                                            <li style=""><a href="google.com" title="Sign in" style="color: rgb(226, 75, 59); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">SIGN IN</a></li>
+                                            <li style=""><a href="" title="FAQs" style="color: rgb(231, 76, 60); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">FAQs</a></li>
+                                            <li style=""><a href="" title="Sign up" style="color: rgb(197, 67, 53); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">SIGN UP</a></li>
+                                            <li style=""><a href="" title="Sign in" style="color: rgb(226, 75, 59); font-size: 16px; font-weight: 500; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg">SIGN IN</a></li>
                                         </ul>
                                     </div><!-- /End Widget Block Content -->
 
@@ -778,11 +778,11 @@ Telegram: @itter_yurii</p>
                                         <!-- Social Icons Block -->
                                         <div class="social-icons-block social-icons-block-md social-icons-block-style-1">
                                             <ul>
-                                                <li style=""><a href="google.com" title="Facebook" style="outline: none; cursor: default;"><i class="fa fa-facebook" style="color: rgb(255, 255, 255); background-color: rgb(61, 94, 153); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
-                                                <li style=""><a href="google.com" title="Google Plus" style="outline: none; cursor: default;"><i class="fa fa-google-plus" style="color: rgb(255, 255, 255); background-color: rgb(215, 61, 50); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
-                                                <li style=""><a href="google.com" title="Twitter" style="outline: none; cursor: default;"><i class="fa fa-twitter" style="color: rgb(255, 255, 255); background-color: rgb(85, 172, 238); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
-                                                <li><a href="google.com" title="youtube" style="outline: none; cursor: default;"><i class="fa fa-youtube-play" style="color: rgb(255, 255, 255); background-color: rgb(204, 24, 30); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
-                                                <li><a href="google.com" title="Behance" style="outline: none; cursor: default;"><i class="fa fa-behance" style="color: rgb(255, 255, 255); background-color: rgb(23, 105, 255); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
+                                                <li style=""><a href="" title="Facebook" style="outline: none; cursor: default;"><i class="fa fa-facebook" style="color: rgb(255, 255, 255); background-color: rgb(61, 94, 153); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
+                                                <li style=""><a href="" title="Google Plus" style="outline: none; cursor: default;"><i class="fa fa-google-plus" style="color: rgb(255, 255, 255); background-color: rgb(215, 61, 50); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
+                                                <li style=""><a href="" title="Twitter" style="outline: none; cursor: default;"><i class="fa fa-twitter" style="color: rgb(255, 255, 255); background-color: rgb(85, 172, 238); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
+                                                <li><a href="" title="youtube" style="outline: none; cursor: default;"><i class="fa fa-youtube-play" style="color: rgb(255, 255, 255); background-color: rgb(204, 24, 30); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
+                                                <li><a href="" title="Behance" style="outline: none; cursor: default;"><i class="fa fa-behance" style="color: rgb(255, 255, 255); background-color: rgb(23, 105, 255); font-size: 18px; outline: none; cursor: default;" src="images/uploads/IMG_20200917_141115_242.jpg"></i></a></li>
                                             </ul>
                                         </div><!-- /End Social Icons Block -->
 
